--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -10,6 +10,8 @@ http {
     tcp_nodelay on;
     keepalive_timeout 15;
 
+    resolver 127.0.0.11 valid=5s ipv6=off;
+
     upstream payment_proxy {
         least_conn;
 
@@ -41,6 +43,16 @@ http {
             proxy_connect_timeout 2s;
             proxy_send_timeout 3s;
             proxy_read_timeout 3s;
+        }
+
+        location /purge-payments {
+            proxy_pass http://payment_proxy;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+
+            proxy_connect_timeout 1s;
+            proxy_send_timeout 2s;
+            proxy_read_timeout 2s;
         }
 
         location /health {
