--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,8 +1,10 @@
 x-api-common: &api-common
-  image: pedropereiradev/payment-proxy:latest
+  image: payment-proxy:arm64
+  platform: linux/arm64
   environment: &api-env
     NODE_ENV: production
     BUN_PORT: 3001
+    DATABASE_URL: postgresql://postgres:password@postgres:5432/payment_proxy
     REDIS_URL: redis://redis:6379
     DEFAULT_PROCESSOR_URL: http://payment-processor-default:8080
     FALLBACK_PROCESSOR_URL: http://payment-processor-fallback:8080
@@ -33,6 +35,7 @@ x-api-common: &api-common
 services:
   load-balancer:
     image: nginx:1.29-alpine
+    platform: linux/arm64
     ports:
       - "9999:9999"
     volumes:
@@ -66,6 +69,7 @@ services:
 
   redis:
     image: redis:latest
+    platform: linux/arm64
     restart: unless-stopped
     ports:
       - "6379:6379"
